Attempted to use Ienumerable Iterator to keep the sequential read optimisation, but it makes for messy code and worse performance.

--- a/Task/Task.csproj
+++ b/Task/Task.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Instructions.MD" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="Instructions.MD" />
+    <None Remove="Readme.MD" />
   </ItemGroup>
 
 </Project>
